force-app/main/default/objects/Room_Reservation__c/fields/Reservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Date__c</fullName>
    <description>The Date for the Room Reservation.</description>
    <label>Reservation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>