force-app/main/default/objects/Room_Reservation__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description
  >The Room Type this reservation is associated with.</description>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Room Reservations</relationshipLabel>
    <relationshipName>Room_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>